# stag-toolkit

./: .dockerignore  .gdformatrc  .gdlintrc  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc  .yamllint.yml  Cargo.toml  LICENSE  Makefile  build-godot.cmd  build.cmd  build.sh  pyproject.toml  readme.md
.cargo/: config.toml
.gitea/composite/setup/: action.yaml
.gitea/setup/: action.yaml
.gitea/workflows/: ci.yaml  release.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  docs.yml  release.yml
.zed/: settings.json
codegen/: Cargo.toml
codegen/src/: lib.rs
docs/: ironpress.md  resources.md  setup.md  simulatedrope.md  stagtest.md  workspace.md
docs/projects/: abyss.md  brick-tower.md
docs/tools/: ironpress.md  stagtest.md
godot/: .gitignore  bootsplash.png.import  export_config.json  export_presets.cfg  icon.svg.import  main.tscn  project.godot
godot-build/: abyss.build  build.sh  install.sh
godot/.godot/: extension_list.cfg  global_script_class_cache.cfg
godot/2d/: hello_world.gd  hello_world.tscn
godot/3d/: startup.tscn
godot/3d/camera/: cameras.tscn
godot/3d/islandbuilder/: meshgen_test.gd  meshgen_test.gd.uid  meshgen_test.tscn  test_ambient_occlusion.tscn
godot/3d/islandbuilder/materials/: mat_island_sandy.tres  mat_island_sandy_nobake.tres  mat_testing_baked.tres  mat_testing_preview.tres
godot/3d/materials/: mat_red.tres
godot/3d/rope/: rope.tscn
godot/addons/stag_toolkit/: plugin.cfg  stag_toolkit.gd  stag_toolkit.gd.uid  stagtoolkit.gdextension  stagtoolkit.gdextension.uid
godot/addons/stag_toolkit/icons/: icon_islandbuilder.svg.import  icon_islandbuildershape.svg.import  icon_queuefloat.svg.import  icon_simulatedrope.svg.import  icon_simulatedropebinding.svg.import  icon_simulatedropesettings.svg.import  icon_stagtoolkit.svg.import  icon_stagtoolkit_monochrome.svg.import
godot/addons/stag_toolkit/plugin/: import_rig.gd  island_builder.gd  island_builder.gd.uid  logger.gd  logger.gd.uid  preprocessmat.gd  preprocessmat.gd.uid  stagtest.gd  stagtest.gd.uid  stagutils.gd  utils.gd  utils.gd.uid  utils_import.gd  utils_import.gd.uid
godot/addons/stag_toolkit/plugins/: island_builder.gd
godot/addons/stag_toolkit/ui/: island_docker.tscn
godot/art/materials/debug_shaders/: debug.gdshaderinc  debug_uv.gdshader  debug_uv2.gdshader  debug_vertex_color.gdshader  debug_wireframe.gdshader  overdraw.gdshader
godot/art/shader_includes/: include_projection.gdshaderinc  include_remap.gdshaderinc  include_vector.gdshaderinc
godot/assets/rope/: mat_rope.tres  mesh_rope_full.tres  shader_rope.gdshader  shader_rope.gdshader.uid  simulated_rope_defaults.tres
godot/islands/: island_builder.gd  island_builder.tscn
godot/islands/materials/: mat_island_debug.tres  mat_island_sandy.tres  mat_island_sandy_nobake.tres
godot/islands/materials/shaders/: baked_island_sandy.gdshaderinc  shader_sandy.gdshader  shader_sandy_noisemaps.gdshader  shader_sandy_prebaked.gdshader
godot/islands/materials/textures/: gradient_sand.tres  noise_generic.tres  noise_normal.tres
godot/islands/shaders/: mat_debug.tres  mat_isle_debug.tres  mat_overdraw.tres  mat_overdraw_shader.tres
godot/lib/: stagtoolkit.gdextension
godot/prototyping/: animation_soup.gd  animation_soup.gd.uid
godot/prototyping/islands/: procedural.gd  procedural.gd.uid  procedural.tscn
godot/test/benchmarks/: bench_benchmarks.gd  bench_benchmarks.gd.uid  bench_benchmarks.tscn  bench_island_builder.gd  bench_island_builder.tscn  bench_many_islands.gd  bench_many_islands.tscn
godot/test/benchmarks/islandbuilder/: bench_build_all.gd  bench_build_all.gd.uid  bench_build_all.tscn  bench_island_builder.gd  bench_island_builder.gd.uid  bench_island_builder.tscn  bench_nets.gd  bench_nets.gd.uid  bench_nets.tscn
godot/test/feature_gated/physics_server/: test_raycast.gd.uid  test_raycast.tscn
godot/test/gdextension/: required_apis.gd  required_apis.gd.uid  required_apis.tscn
godot/test/sanity/: test_callables.gd  test_callables.gd.uid  test_callables.tscn
godot/test/scenarios/: failing_test.gd  failing_test.tscn  hello_world.tscn  signals_test.gd  signals_test.tscn  test_hello_world.gd  test_island_builder.gd  test_island_builder.tscn  test_queues.gd  test_queues.tscn  test_utils.gd  test_utils.tscn
godot/test/scenarios/example/: failing_test.tscn  hello_world.tscn  signals_test.gd.uid  signals_test.tscn  test_hello_world.gd  test_hello_world.gd.uid  test_hello_world.tscn  test_signals.gd  test_signals.tscn  test_tick_timers.gd  test_tick_timers.gd.uid  test_tick_timers.tscn  test_workflow.gd  test_workflow.gd.uid  (+1 more)
rust/StagToolkit/: Cargo.toml
rust/StagToolkit/src/: island.rs  lib.rs  primqueue.rs  rope.rs
rust/StagToolkit/src/math/: projection.rs  sdf.rs  types.rs  volumetric.rs
rust/StagToolkit/src/mesh/: godot.rs  hull.rs  nets.rs  pointcloud.rs  trimesh.rs
rust/StagToolkit/src/simulation/: rope.rs
sphinx/: .gitignore  build.sh  conf.py  index.rst  version.py
sphinx/source/: conf.py  gdextension.rst  gdscript.rst  index.rst  tutorials.rst  version.py
sphinx/source/tutorials/: stagtest.rst
stag-pylib/: Cargo.toml  pyproject.toml  readme.md
stag-pylib/src/: lib.rs
stag-pylib/src/stag_pylib/: __init__.py  _core.pyi
stag-toolkit/: Cargo.toml  pyproject.toml  readme.md
stag-toolkit-codegen/: Cargo.toml
stag-toolkit-codegen/src/: lib.rs
stag-toolkit/benches/: island.rs  mesh.rs  simulation.rs
stag-toolkit/src/: lib.rs  utils.rs
stag-toolkit/src/animation/: mixable.rs  pose.rs  soup.rs
stag-toolkit/src/classes/: analytics.rs  camera.rs  island.rs  island_settings.rs  line.rs  physics_server.rs  primqueue.rs  rope.rs  sanity.rs  utils.rs
stag-toolkit/src/math/: bounding_box.rs  delta.rs  noise.rs  polar.rs  primqueue.rs  projection.rs  raycast.rs  sdf.rs  types.rs  volumetric.rs
stag-toolkit/src/mesh/: godot.rs  hull.rs  island.rs  pointcloud.rs  raycast.rs  strip.rs  trimesh.rs
stag-toolkit/src/physics/: body.rs  body_state.rs  identity.rs  raycast.rs  server.rs
stag-toolkit/src/simulation/: rope.rs
(+89 files in other folders)
