[package]
name = "stag_pylib"
version = "0.1.0"
edition = "2024"

[lib]
name = "_core"
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]

[dependencies]
glam = "0.32.1"
pyo3 = { version = "0.28.2", features = ["extension-module", "abi3-py314"] }
stag-toolkit = { path = "../stag-toolkit", features = [] }
