[package]
name = "stag-toolkit-codegen"
version = "0.6.0"
edition = "2024"
license = "Apache-2.0"
description = "Internal crate used by stag-toolkit"
repository = "https://github.com/arocull/stag-toolkit"
homepage = "https://github.com/arocull/stag-toolkit"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0.40"
syn = "2.0.104"
