[package]
name = "stag-toolkit"
version = "0.4.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]  # Compile this crate to a dynamic C library.
# doc = true

[features]
default = ["godot", "physics_server"]
godot = ["dep:godot"] # Enables compiling as a Godot plugin
# nothreads = ["godot/experimental-wasm-nothreads"] # Intended for WASM exports
physics_server = [] # Experimental physics server

[dependencies]
fast-surface-nets = "0.2.0"
glam = { version = "0.30.2", features = ["approx"] }
godot = { version = "0.3.0", features = ["api-4-4", "experimental-threads", "register-docs"], optional = true }
ndshape = "0.3.0"
noise = "0.9.0"
rayon = "1.10.0"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }

[[bench]]
name = "simulation"
harness = false
path = "benches/simulation.rs"

[lints.rust]
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html#/
unwrap_used = "deny"
inefficient_to_string = "warn"
use_self = "warn"
implicit_clone = "warn"
