[package]
name = "stag-toolkit"
description = "Real-time solutions for 3D games, art, and simulations."
version = "0.5.2"
edition = "2024"
license = "Apache-2.0"
readme = "readme.md"
repository = "https://github.com/arocull/stag-toolkit"
homepage = "https://github.com/arocull/stag-toolkit"
keywords = ["mesh", "gamedev", "volumetrics"]
categories = ["visualization", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]  # Compile this crate to a dynamic C library.
# doc = true

[features]
default = []
godot = ["dep:godot"] # Enables compiling as a Godot plugin
# nothreads = ["godot/experimental-wasm-nothreads"] # Intended for WASM exports
physics_server = [] # Experimental physics server
animation = [] # Experimental animation system

[dependencies]
fast-surface-nets = "0.2.1"
glam = { version = "0.30.9", features = ["approx"] }
godot = { version = "0.4.2", features = ["api-4-5", "experimental-threads", "register-docs"], optional = true }
ndshape = "0.3.0"
noise = "0.9.0"
rayon = "1.11.0"
stag-toolkit-codegen = { path = "../stag-toolkit-codegen", version = "0.5.2" }

[dev-dependencies]
criterion = { version = "0.7.0", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "mesh"
harness = false
path = "benches/mesh.rs"

[[bench]]
name = "island"
harness = false
path = "benches/island.rs"

[[bench]]
name = "simulation"
harness = false
path = "benches/simulation.rs"

[lints.rust]
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html#/
unwrap_used = "deny"
inefficient_to_string = "warn"
use_self = "warn"
implicit_clone = "warn"
