[package]
name = "StagToolkit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
fast-surface-nets = "0.2.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["api-4-2-2", "experimental-threads"] }
json = "0.12.4"
noise = "0.9.0"
