[package]
name = "StagToolkit"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
fast-surface-nets = "0.2.0"
glam = { version = "0.29.2", features = ["approx", "mint"] }
godot = { version = "0.2.1", features = ["api-4-2-2", "experimental-threads"] }
mint = "0.5.9"
ndshape = "0.3.0"
noise = "0.9.0"

# [env]
# GODOT4_BIN = { value = "/usr/local/bin/godot", relative = false, force = false }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html#/
unwrap_used = "deny"
inefficient_to_string = "warn"
use_self = "warn"
implicit_clone = "warn"
