[package]
name = "StagToolkit"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
fast-surface-nets = "0.2.0"
glam = { version = "0.30.2", features = ["approx", "mint"] }
godot = { version = "0.3.0", features = ["api-4-4", "experimental-threads", "register-docs"] }
mint = "0.5.9"
ndshape = "0.3.0"
noise = "0.9.0"
rayon = "1.10.0"

[lints.rust]
missing_docs = "allow"

[lints.clippy]
# https://rust-lang.github.io/rust-clippy/master/index.html#/
unwrap_used = "deny"
inefficient_to_string = "warn"
use_self = "warn"
implicit_clone = "warn"
